--- a/config_site/index.html
+++ b/config_site/index.html
@@ -1,31 +1,35 @@
 <!DOCTYPE html>
 <html lang="uk">
+
 <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Danwand Configuration</title>
-    <!-- <link rel="manifest" href="/manifest.json" crossorigin="use-credentials"> -->
-    <link rel="icon" href="favicon.ico" type="image/x-icon" >
-    <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css" />
-    <link rel="stylesheet" type="text/css" href="/css/site.css" />
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Danwand Configuration</title>
+  <!-- <link rel="manifest" href="/manifest.json" crossorigin="use-credentials"> -->
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
+  <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css" />
+  <link rel="stylesheet" type="text/css" href="/css/site.css" />
 </head>
+
 <body>
+  <div class="container">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">DanWand</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-      
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/wifi.php">WiFi Configuration</a>
-            </li>
-            <!-- <li class="nav-item dropdown">
+      <a class="navbar-brand" href="#">DanWand</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/wifi.php">WiFi Configuration</a>
+          </li>
+          <!-- <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Dropdown
               </a>
@@ -36,13 +40,23 @@
                 <a class="dropdown-item" href="#">Something else here</a>
               </div>
             </li> -->
-            <li class="nav-item">
-              <a class="nav-link disabled" href="#">Debug</a>
-            </li>
-          </ul>
-        </div>
-      </nav>
-      <script src="/js/bootstrap.min.js"></script>
-  
+          <li class="nav-item">
+            <a class="nav-link disabled" href="#">Debug</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+
+    <h1>Current configuration</h1>
+
+    Wifi Network
+
+    If config mode
+
+    else wpa mode
+  </div>
+  <script src="/js/bootstrap.min.js"></script>
+
 </body>
+
 </html>
